feat: organizer absorbe fees feat
